syntax = "proto3";

package micro.chatting.service.websrv;

service Websrv {
  rpc Chat(ChatRequest) returns (ChatResponse) {}
	rpc Call(Request) returns (Response) {}
	rpc Stream(StreamingRequest) returns (stream StreamingResponse) {}
	rpc PingPong(stream Ping) returns (stream Pong) {}
}

message ChatRequest {
    string SessionId = 1;
    string Text = 2;
}

message ChatResponse {
    string Errno = 1;
    string Errmsg = 2;
    string Reply = 3;
}

message Message {
	string say = 1;
}

message Request {
	string name = 1;
}

message Response {
	string msg = 1;
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}
